增加聚类页面,调整了一点entity的页面

--- a/app/src/main/res/layout/fragment_entity.xml
+++ b/app/src/main/res/layout/fragment_entity.xml
@@ -39,6 +39,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:iconifiedByDefault="false"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
                     android:background="@drawable/background_edit"
                     android:queryHint="@string/search" />
 
