调整了entity的界面

--- a/app/src/main/res/layout/cluster_event_details.xml
+++ b/app/src/main/res/layout/cluster_event_details.xml
@@ -21,6 +21,7 @@
     <TextView
         android:id="@+id/event_title"
         android:text="Event"
+        android:lineSpacingMultiplier="1.1"
         android:gravity="center"
         android:textSize="15sp"
         android:textColor="@android:color/black"
