--- a/app/src/main/res/drawable/background_share.xml
+++ b/app/src/main/res/drawable/background_share.xml
@@ -7,7 +7,7 @@
     <!--描边-->
     <stroke
         android:width="1dp"
-        android:color="#B996EC" />
+        android:color="#E1E1E1" />
     <solid android:color="@android:color/white"/>
 
 </shape>
