--- a/app/src/main/res/layout/layout_custom_channel.xml
+++ b/app/src/main/res/layout/layout_custom_channel.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:orientation="horizontal"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_channel"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="8"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:layout_centerInParent="true" />
+        android:textColor="@color/colorPrimary" />
 
     <ImageView
         android:id="@+id/iv_delete"
-        android:layout_width="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_width="0dp"
+        android:layout_weight="2"
         android:visibility="invisible"
         android:layout_height="wrap_content"
         android:src="@mipmap/delete_channel" />
-</RelativeLayout>
+</LinearLayout>
