--- a/app/src/main/res/layout/layout_entity_item.xml
+++ b/app/src/main/res/layout/layout_entity_item.xml
@@ -6,16 +6,13 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:id="@+id/entity_item_name"
-        android:textSize="20dp"/>
+        android:textSize="18sp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/entityItem"
-        android:textSize="10dp"/>
-
-    <!--include layout="@layout/layout_entity_item_details"/-->
 
 </LinearLayout>
