--- a/app/src/main/res/layout/layout_relation_item.xml
+++ b/app/src/main/res/layout/layout_relation_item.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:textColor="#6A6A6A"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:layout_height="35dp"
         android:id="@+id/relation_label"/>
 
     <ImageView
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
         android:layout_gravity="center"
         android:id="@+id/relation_arrow"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/relation_obj_name" />
+        android:id="@+id/relation_obj_name"
+        android:textSize="15sp"
+        android:textColor="#474747"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_weight="2"
+        android:gravity="center" />
 
 </LinearLayout>
