调整了界面

--- a/app/src/main/res/layout/layout_relation_item.xml
+++ b/app/src/main/res/layout/layout_relation_item.xml
@@ -9,8 +9,11 @@
         android:layout_width="0dp"
         android:textColor="#6A6A6A"
         android:layout_weight="1"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="center_vertical"
         android:gravity="center"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:id="@+id/relation_label"/>
 
     <ImageView
@@ -24,7 +27,9 @@
         android:textSize="15sp"
         android:textColor="#474747"
         android:layout_width="0dp"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:layout_weight="2"
         android:gravity="center" />
 
