--- a/app/src/main/res/layout/layout_entity_item.xml
+++ b/app/src/main/res/layout/layout_entity_item.xml
@@ -6,7 +6,8 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:minHeight="30dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
