--- a/app/src/main/res/layout/layout_entity_property.xml
+++ b/app/src/main/res/layout/layout_entity_property.xml
@@ -18,7 +18,8 @@
             android:layout_width="0dp"
             android:textColor="#171717"
             android:layout_weight="2"
-            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:id="@+id/property_type"
             android:textSize="15sp"/>
 
@@ -26,7 +27,7 @@
             android:textColor="#474747"
             android:layout_width="0dp"
             android:layout_weight="8"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/property_text"
             android:textSize="15sp"/>
 
