--- a/app/src/main/res/layout/cluster_child.xml
+++ b/app/src/main/res/layout/cluster_child.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginStart="50dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginTop="10dp"/>
 
 </LinearLayout>
