--- a/app/src/main/res/layout/cluster_group.xml
+++ b/app/src/main/res/layout/cluster_group.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout android:orientation="vertical"
-    android:background="@android:color/white"
+    android:background="@color/corona_background"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android" >
@@ -16,7 +16,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"/>
 
 </LinearLayout>
